auto handle overflow

--- a/tailwind/src/layouts/Layout.astro
+++ b/tailwind/src/layouts/Layout.astro
@@ -18,7 +18,7 @@ const links = [
     <meta name="generator" content={Astro.generator} />
     <title>PkgForge Index</title>
   </head>
-  <body>
+  <body class="overflow-auto">
     <div class="flex flex-col lg:flex-row w-full h-15 lg:h-10 mb-1">
       <div class="lg:hidden space-x-2">
         {
