--- a/tailwind/src/layouts/Layout.astro
+++ b/tailwind/src/layouts/Layout.astro
@@ -20,17 +20,8 @@ const links = [
   </head>
   <body class="overflow-auto">
     <div class="flex flex-col lg:flex-row w-full h-15 lg:h-10 mb-1">
-      <div class="lg:hidden space-x-2">
-        {
-          links.map((s) => (
-            <a class="mobile-a lg:hidden" href={s.href} target={s.target}>
-              {s.text}
-            </a>
-          ))
-        }
-      </div>
       <h1 class="mt-auto mx-auto lg:mx-0 text-xl lg:text-4xl">Package Forge</h1>
-      <div class="hidden lg:flex text-center ml-3">
+      <div class="flex text-center lg:ml-3">
         {
           links.map((s) => (
             <a class="desktop-a" href={s.href} target={s.target}>
@@ -52,10 +43,6 @@ const links = [
     width: 100%;
     height: 100%;
     @apply dark:bg-gray-700 dark:text-white;
-  }
-
-  .mobile-a {
-    @apply hover:bg-gray-200 hover:dark:bg-gray-500 px-2;
   }
 
   .desktop-a {
