--- a/tailwind/src/layouts/Layout.astro
+++ b/tailwind/src/layouts/Layout.astro
@@ -42,7 +42,7 @@ const links = [
     margin: 0;
     width: 100%;
     height: 100%;
-    @apply dark:bg-gray-700 dark:text-white;
+    @apply dark:bg-[#222629] dark:text-white;
   }
 
   .desktop-a {
