--- a/tailwind/src/layouts/Layout.astro
+++ b/tailwind/src/layouts/Layout.astro
@@ -34,6 +34,33 @@ const links = [
     <Separator />
     <slot />
   </body>
+
+  <script is:inline>
+    const getThemePreference = () => {
+      if (
+        typeof localStorage !== "undefined" &&
+        localStorage.getItem("theme")
+      ) {
+        return localStorage.getItem("theme");
+      }
+      return window.matchMedia("(prefers-color-scheme: dark)").matches
+        ? "dark"
+        : "light";
+    };
+    const isDark = getThemePreference() === "dark";
+    document.documentElement.classList[isDark ? "add" : "remove"]("dark");
+
+    if (typeof localStorage !== "undefined") {
+      const observer = new MutationObserver(() => {
+        const isDark = document.documentElement.classList.contains("dark");
+        localStorage.setItem("theme", isDark ? "dark" : "light");
+      });
+      observer.observe(document.documentElement, {
+        attributes: true,
+        attributeFilter: ["class"],
+      });
+    }
+  </script>
 </html>
 
 <style>
@@ -42,7 +69,6 @@ const links = [
     margin: 0;
     width: 100%;
     height: 100%;
-    @apply dark:bg-[#222629] dark:text-white;
   }
 
   .desktop-a {
