--- a/web/src/pages/index.astro
+++ b/web/src/pages/index.astro
@@ -1,10 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import List from "../components/list";
-
-import metadata from "../metadata.json";
 ---
 
 <Layout>
-  <List list={metadata} client:only />
+  <List client:only />
 </Layout>
