auto case fix js

--- a/web/src/pages/404.astro
+++ b/web/src/pages/404.astro
@@ -25,5 +25,13 @@ import { Button, buttonVariants } from "@/components/ui/button";
     >
       Take me home
     </a>
+
+    <script>
+      const url = window.location.href;
+
+      if (url != url.toLowerCase()) {
+        window.location.href = url.toLowerCase();
+      }
+    </script>
   </div>
 </Layout>
