--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -2,22 +2,8 @@
 import "@/styles/globals.css";
 
 import { Separator } from "@/components/ui/separator.tsx";
-
-const links = [
-  { text: "Home", href: "/", target: "_self", icon: 0 },
-  {
-    text: "GitHub",
-    href: "https://github.com/pkgforge",
-    target: "_blank",
-    icon: 1,
-  },
-  {
-    text: "Discord",
-    href: "https://discord.gg/wc3eseffpB",
-    target: "_blank",
-    icon: 2,
-  },
-];
+import { ModeToggle } from "@/components/mode-toggle";
+import { SocialLink } from "@/components/social-link";
 ---
 
 <!doctype html>
@@ -29,40 +15,24 @@ const links = [
     <meta name="generator" content={Astro.generator} />
     <title>PkgForge Index</title>
   </head>
-  <body class="overflow-auto">
-    <div class="flex flex-row w-full h-16 mb-1 px-3 text-center items-center">
-      <img id="secret" src="/favicon.svg" class="h-10 w-10" alt="Icon" />
-      <a
-        href="/"
-        class="ml-2 font-bold select-none cursor-pointer hidden sm:block"
-        >pkgforge/pkgs</a
-      >
-      <div class="flex w-full text-center ml-2">
-        {
-          links.map((s) => (
-            <a class={"desktop-a"} href={s.href} target={s.target}>
-              {s.icon == 0 ? (
-                <img src="/home.svg" alt="Home" class="h-4 w-4 dark:invert" />
-              ) : s.icon == 1 ? (
-                <img
-                  src="/github.svg"
-                  alt="GitHub"
-                  class="h-4 w-4 dark:invert"
-                />
-              ) : (
-                <img
-                  src="/discord.svg"
-                  alt="Discord Server"
-                  class="h-4 w-4 dark:invert"
-                />
-              )}
-              <span class="hidden vvs:block">{s.text}</span>
-            </a>
-          ))
-        }
+  <body class="overflow-auto container">
+    <nav
+      class="flex flex-row w-full h-16 px-3 text-center justify-between items-center"
+    >
+      <div class="flex flex-row space-x-2 items-center">
+        <img id="secret" src="/favicon.svg" class="h-10 w-10" alt="Icon" />
+        <a
+          href="/"
+          class="ml-2 font-bold select-none cursor-pointer hidden sm:block"
+          >pkgforge/pkgs</a
+        >
       </div>
-    </div>
-    <Separator />
+      <div class="flex flex-row items-center gap-2">
+        <SocialLink client:load />
+        <ModeToggle client:load />
+      </div>
+    </nav>
+    <Separator className="mb-4" />
     <slot />
   </body>
 
