--- a/web/src/pages/repo/bincache/aarch64-linux/[family]/index.astro
+++ b/web/src/pages/repo/bincache/aarch64-linux/[family]/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../../../layouts/Layout.astro";
-import App from "../../../../components/family.tsx";
+import Layout from "../../../../../layouts/Layout.astro";
+import App from "../../../../../components/family.tsx";
 
 export async function getStaticPaths() {
-  const { default: family } = await import("./_family.json");
+  const { default: family } = await import("../_family.json");
 
   return Object.entries(family).map(([family, apps]) => ({
     params: { family },
