feat: design improvements to pkg family & app details pages

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -15,7 +15,7 @@ import { SocialLink } from "@/components/social-link";
     <meta name="generator" content={Astro.generator} />
     <title>PkgForge Index</title>
   </head>
-  <body class="overflow-auto container">
+  <body class="overflow-auto md:container">
     <nav
       class="flex flex-row w-full h-16 px-3 text-center justify-between items-center"
     >
