feat: added download and json api cards

--- a/web/src/pages/repo/bincache/aarch64-linux/[family]/[package]/index.astro
+++ b/web/src/pages/repo/bincache/aarch64-linux/[family]/[package]/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from "../../../../../layouts/Layout.astro";
-import App from "../../../../../components/app.tsx";
+import Layout from "../../../../../../layouts/Layout.astro";
+import App from "../../../../../../components/app.tsx";
 
 export async function getStaticPaths() {
-  const { default: apps } = await import("../_apps.json");
+  const { default: apps } = await import("../../_apps.json");
 
   return apps.map((app) => {
     return {
