fix: moved download link to /dl, removed redundant field raw, cron build to 30mins

--- a/web/src/pages/dl/bincache/x86_64-linux/[family]/[package]/raw.dl.astro
+++ b/web/src/pages/dl/bincache/x86_64-linux/[family]/[package]/raw.dl.astro
@@ -1,7 +1,23 @@
 ---
 import Layout from "@/layouts/Layout.astro";
-import { getStaticPaths } from "./index.astro";
-export { getStaticPaths };
+
+export async function getStaticPaths() {
+  const { default: apps } = await import("../../../../../repo/bincache/x86_64-linux/_apps.json");
+
+  return apps.map((app) => {
+    return {
+      params: {
+        family: app.pkg_family,
+        package: app.pkg_name || app.pkg,
+      },
+      props: {
+        data: app,
+        logs: app.build_log || "",
+      },
+    };
+  });
+}
+
 const { data } = Astro.props;
 ---
 
