--- a/web/src/pages/repo/bincache/x86_64-linux/[family]/[package]/index.astro
+++ b/web/src/pages/repo/bincache/x86_64-linux/[family]/[package]/index.astro
@@ -23,5 +23,5 @@ const { data, logs } = Astro.props;
 ---
 
 <Layout>
-  <App data={data} logs={logs} client:only />
+  <App data={data} logs={logs} repo="bincache" client:only />
 </Layout>
