--- a/web/src/pages/dl/bincache/aarch64-linux/[family]/[package]/raw.dl.astro
+++ b/web/src/pages/dl/bincache/aarch64-linux/[family]/[package]/raw.dl.astro
@@ -2,7 +2,9 @@
 import Layout from "@/layouts/Layout.astro";
 
 export async function getStaticPaths() {
-  const { default: apps } = await import("../../../../../repo/bincache/aarch64-linux/_apps.json");
+  const { default: apps } = await import(
+    "../../../../../repo/bincache/aarch64-linux/_apps.json"
+  );
 
   return apps.map((app) => {
     // Thanks @Azathothas for forcing us to write this hellifying script
