--- a/web/src/pages/repo/bincache/x86_64-linux/[...slug].astro
+++ b/web/src/pages/repo/bincache/x86_64-linux/[...slug].astro
@@ -26,5 +26,5 @@ const { data, logs } = Astro.props;
 ---
 
 <Layout>
-  <App data={data} logs={logs} repo="pkgcache" client:only />
+  <App data={data} logs={logs} repo="bincache" client:only />
 </Layout>
