--- a/web/src/pages/repo/soarpkgs/[category]/[...slug].astro
+++ b/web/src/pages/repo/soarpkgs/[category]/[...slug].astro
@@ -28,5 +28,5 @@ const { data, logs } = Astro.props;
 ---
 
 <Layout>
-  <App data={data} logs={logs} repo="pkgcache" client:only />
+  <App data={data} logs={logs} repo="soarpkgs" client:only />
 </Layout>
