--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -15,9 +15,9 @@ import { SocialLink } from "@/components/social-link";
     <meta name="generator" content={Astro.generator} />
     <title>PkgForge Index</title>
   </head>
-  <body class="overflow-auto md:container">
+  <body class="overflow-auto">
     <nav
-      class="flex flex-row w-full h-16 px-3 text-center justify-between items-center"
+      class="flex flex-row w-full h-16 px-3 text-center justify-between items-center md:container"
     >
       <div class="flex flex-row space-x-2 items-center">
         <img id="secret" src="/favicon.svg" class="h-10 w-10" alt="Icon" />
@@ -32,8 +32,13 @@ import { SocialLink } from "@/components/social-link";
         <ModeToggle client:load />
       </div>
     </nav>
-    <Separator className="mb-4" />
-    <slot />
+
+    <Separator className="mb-4 md:container" />
+
+    <div class="md:container">
+      <slot />
+    </div>
+    
   </body>
 
   <script is:inline>
