added new architectures and package repos
- added pkgforge-go with 4 archs (x64, arm64, loong64, riscv64)
- added pkgforge-cargo with 4 archs (x64, arm64, loong64, riscv64)
- commented global search for future fixing

--- a/web/src/layouts/Layout.astro
+++ b/web/src/layouts/Layout.astro
@@ -29,7 +29,7 @@ import { GlobalSearch } from "@/components/global-search";
         >
       </div>
       <div class="flex flex-row items-center gap-2">
-        <GlobalSearch client:load />
+        <!-- <GlobalSearch client:load /> -->
         <SocialLink client:load />
         <ModeToggle client:load />
       </div>
